# pd-iemmatrix

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.txt  BUGS.txt  CHANGES.txt  INSTALL.txt  LICENSE.txt  Make.stublibs  Makefile  Makefile.am  README.md  README.txt  array.c  array.h  autogen.sh  configure.ac  convolution_partitioned_crossfade2.c  convolver.c  convolver.h  iemmatrix-meta.pd.in  makefile  mtx_convolver~.c  test_convolver.c
.git-ci/: gitlab-iem.yml  macOS.brew  msys2.pacman  requirements.apt  requirements.brew  requirements.msys2  split-debug
.hugo/: README.md  config.toml
.hugo/scripts/: makeextraconfig.sh  pdsvg2lightdark.py
Pd_example/: 01_2x2_random_reverb.pd  02_output_crossfade_SISO_and_MIMO.pd  Makefile  mtx_convolver~.c  test_mtx_convolver.pd  test_mtx_convolver_multichannel.pd
abs/: Makefile.am  mtx_.cabs2-help.pd  mtx_.cabs2.pd  mtx_.cdiv-help.pd  mtx_.cdiv.pd  mtx_.cmul-help.pd  mtx_.cmul.pd  mtx_atan2-help.pd  mtx_atan2.pd  mtx_cabs2-help.pd  mtx_cabs2.pd  mtx_cart2sph-help.pd  mtx_cart2sph.pd  mtx_cinverse-help.pd  mtx_cinverse.pd  mtx_cmul-help.pd  mtx_cmul.pd  mtx_distance-help.pd  mtx_distance.pd  mtx_fill_col_grid-help.pd  mtx_fill_col_grid.pd  mtx_fill_row_grid-help.pd  mtx_fill_row_grid.pd  mtx_fill_rowcol-help.pd  mtx_fill_rowcol.pd  mtx_fill_rowcol_grid-help.pd  mtx_fill_rowcol_grid.pd  mtx_find_rowcol-help.pd  mtx_find_rowcol.pd  mtx_index2rowcol-help.pd  mtx_index2rowcol.pd  mtx_index_col_grid-help.pd  mtx_index_col_grid.pd  mtx_index_row_grid-help.pd  mtx_index_row_grid.pd  mtx_index_rowcol-help.pd  mtx_index_rowcol.pd  mtx_index_rowcol_grid-help.pd  mtx_index_rowcol_grid.pd  mtx_interpol.pd  (+62 more)
alias/: README
doc/: Makefile.am  matrix-help.pd  matrix~-help.pd  mtx_abs-help.pd  mtx_add-help.pd  mtx_and-help.pd  mtx_atan-help.pd  mtx_bessel-help.pd  mtx_binops-help.pd  mtx_bitand-help.pd  mtx_bitleft-help.pd  mtx_bitor-help.pd  mtx_bitright-help.pd  mtx_check-help.pd  mtx_cholesky-help.pd  mtx_circular_harmonics-help.pd  mtx_col-help.pd  mtx_colon-help.pd  mtx_concat-help.pd  mtx_conv-help.pd  mtx_convolver~-help.pd  mtx_cos-help.pd  mtx_cumprod-help.pd  mtx_cumsum-help.pd  mtx_dbtopow-help.pd  mtx_dbtorms-help.pd  mtx_diag-help.pd  mtx_diegg-help.pd  mtx_diff-help.pd  mtx_distance2-help.pd  mtx_egg-help.pd  mtx_eig-help.pd  mtx_ei~-help.pd  mtx_element-help.pd  mtx_eq-help.pd  mtx_exp-help.pd  mtx_eye-help.pd  mtx_fill-help.pd  mtx_find-help.pd  mtx_gauss-help.pd  (+48 more)
documentation/: _index.md  example.pd
documentation/objects/: _index.md  matrix.md  matrix~.md  mtx_.cabs2.md  mtx_.cdiv.md  mtx_.cmul.md  mtx_abs.md  mtx_add.md  mtx_and.md  mtx_atan.md  mtx_atan2.md  mtx_bessel.md  mtx_binops.md  mtx_bitand.md  mtx_bitleft.md  mtx_bitor.md  mtx_bitright.md  mtx_cabs2.md  mtx_cart2sph.md  mtx_check.md  mtx_cholesky.md  mtx_cinverse.md  mtx_circular_harmonics.md  mtx_cmul.md  mtx_col.md  mtx_colon.md  mtx_concat.md  mtx_conv.md  mtx_convolver~.md  mtx_cos.md  mtx_cumprod.md  mtx_cumsum.md  mtx_dbtopow.md  mtx_dbtorms.md  mtx_diag.md  mtx_diegg.md  mtx_diff.md  mtx_distance.md  mtx_distance2.md  mtx_dotdiv.md  (+102 more)
documentation/tutorials/: _index.md
help/: matrix-help.pd  matrix~-help.pd  mtx_add-help.pd  mtx_atan-help.pd  mtx_bessel-help.pd  mtx_binops-help.pd  mtx_bitand-help.pd  mtx_bitor-help.pd  mtx_bitright-help.pd  mtx_check-help.pd  mtx_circular_harmonics-help.pd  mtx_col-help.pd  mtx_concat-help.pd  mtx_conv-help.pd  mtx_convolver~-help.pd  mtx_cos-help.pd  mtx_dbtopow-help.pd  mtx_dbtorms-help.pd  mtx_exp-help.pd  mtx_eye-help.pd  mtx_fft-help.pd  mtx_gauss-help.pd  mtx_ge-help.pd  mtx_gt-help.pd  mtx_ifft-help.pd  mtx_index-help.pd  mtx_isequal-help.pd  mtx_le-help.pd  mtx_lt-help.pd  mtx_mean-help.pd  mtx_min2-help.pd  mtx_minmax-help.pd  mtx_mul-help.pd  mtx_mul~-help.pd  mtx_neq-help.pd  mtx_not-help.pd  mtx_pack~-help.pd  mtx_pow-help.pd  mtx_print-help.pd  mtx_qr-help.pd  (+14 more)
help/doc/: CH3-HRIR.arr3  test.mtx
include/: array.h  convolver.h
m4/: iem_fat.m4  iem_simd.m4
mtx_convolver/: README.md  makefile
mtx_convolver/Pd_example/: mtx_convolver~.c  test_mtx_convolver.pd  whatstrumps_credits.txt
mtx_convolver/include/: array.h
mtx_convolver/src/: convolver.c
src/: Makefile  array.c  array.h  configure.ac  convolver.c  convolver.h  iemmatrix.c  iemmatrix.h  iemmatrix_binop.c  iemmatrix_binops.c  iemmatrix_fft.c  iemmatrix_fft.h  iemmatrix_sources.c  iemmatrix_sources.h  iemmatrix_stub.c  iemmatrix_stub.h  iemmatrix_unop.c  iemmatrix_utility.c  makesource.sh  matrix.c  mtx_abs.c  mtx_add.c  mtx_and.c  mtx_atan.c  mtx_atan2.c  mtx_bessel.c  mtx_binop_generic.h  mtx_bitand.c  mtx_bitleft.c  mtx_bitor.c  mtx_bitright.c  mtx_bspline.c  mtx_check.c  mtx_cholesky.c  mtx_col.c  mtx_colon.c  mtx_concat.c  mtx_conv.c  mtx_convolver~.c  mtx_cos.c  (+78 more)
src/mtx_convolver/: LICENSE.txt  array.c  array.h  convolver.c  convolver.h  test_convolver.c
src/mtx_qhull/: convhull.pd  entry.h  list.c  list.h  mtx_xprod.pd  test_list.c  test_write_conv_hull_obj.pd  vectors.c  vectors.h  zhull.c  zhull.h
src/mtx_spherical_harmonics/: Makefile.am  README  chebyshev12.c  chebyshev12.h  ivanic.c  ivanic.h  legendre_a.c  legendre_a.h  sharmonics.c  sharmonics.h  sharmonics_normalization.c  sharmonics_normalization.h  sph_radial.c  sph_radial.h
src/stub/: fftw.h  fftwf.h  gsl.c  sndfile.c
src/win-VC6/: iemmatrix.dsp  iemmatrix.dsw
src/win-VC9/: iemmatrix.vcproj
stub/: fftw.c  fftwf.c  fftwf.h  gsl.h  stubify.sh
tests/: Makefile  epseq.pd  runtests.bat  runtests.sh  runtests.txt  runtests_nogui.pd  testunit.pd
tests/mtx_abs/: 00_exist.pd  02_function.pd  03_function.pd
tests/mtx_add/: 00_exist.pd  00_exist1.pd
tests/mtx_and/: 00_exist.pd
tests/mtx_bitand/: 00_exist.pd
tests/mtx_bitleft/: 00_exist.pd
tests/mtx_bitor/: 00_exist.pd
tests/mtx_bitright/: 00_exist.pd
tests/mtx_check/: 00_exist.pd
tests/mtx_cholesky/: 00_exist.pd
tests/mtx_col/: 00_exist.pd
tests/mtx_colon/: 00_exist.pd  00_exist1.pd
tests/mtx_concat/: 00_exist.pd
tests/mtx_conv/: 00_exist.pd
tests/mtx_cos/: 00_exist.pd  (+3 more)
(+134 files in other folders)
